results/SpecGenBench/conversational/log-ConvertToTitle-2023_06_24_18_10_23.txt
class Solution {
    //@ requires columnNumber > 0;
    //@ ensures \result.length() > 0;
    //@ ensures (\forall int i; 0 <= i && i < \result.length(); ('A' <= \result.charAt(i) && \result.charAt(i) <= 'Z'));
    public String convertToTitle(int columnNumber) {
        StringBuffer sb = new StringBuffer();
        //@ ghost int maxnumber = Integer.MAX_VALUE;
        //@ maintaining columnNumber > 0;
        //@ maintaining (\forall int i; 0 <= i && i < sb.length(); ('A' <= sb.charAt(i) && sb.charAt(i) <= 'Z'));
        //@ decreases maxnumber - columnNumber;
        while (columnNumber > 0) {
            int a0 = (columnNumber - 1) % 26 + 1;
            sb.append((char)(a0 - 1 + 'A'));
            columnNumber = (columnNumber - a0) / 26;
        }
        return sb.reverse().toString();
    }
}
/home/max/Documents/JMLGPT/tmp/ConvertToTitle.java:18: verify: The prover cannot establish an assertion (UndefinedCalledMethodPrecondition: /home/max/Documents/JMLGPT/openjml/specs/java/lang/String.jml:447:) in method convertToTitle
}
^
Note: Call stack
  /home/max/Documents/JMLGPT/openjml/specs/java/lang/String.jml:458: java.lang.String.equals
  /home/max/Documents/JMLGPT/openjml/specs/java/lang/StringBuffer.jml:35: java.lang.String.equals
  /home/max/Documents/JMLGPT/tmp/ConvertToTitle.java:6: java.lang.StringBuffer.<init>
/home/max/Documents/JMLGPT/openjml/specs/java/lang/String.jml:447: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ConvertToTitle.java:18:
      @ public static model helper boolean equals(nullable String s1, nullable String s2);
                                           ^
/home/max/Documents/JMLGPT/openjml/specs/java/lang/String.jml:436: verify: Precondition conjunct is false: s1.charArray != null
      @   //-RAC@ requires s1.charArray != null & s2.charArray != null; // OPENJML: TODO Needs the invariant that charArray is not null
                                        ^
/home/max/Documents/JMLGPT/openjml/specs/java/lang/String.jml:439: verify: Precondition conjunct is false: s1 == s2
      @   requires s1 == s2;
                      ^
/home/max/Documents/JMLGPT/openjml/specs/java/lang/String.jml:442: verify: Precondition conjunct is false: s1 == null || s2 == null || (java.lang.String.isInterned(s1) && java.lang.String.isInterned(s2))
      @   requires s1 == null || s2 == null ||
                                            ^
5 verification failures

class Solution {
    //@ requires columnNumber > 0;
    //@ ensures \result.length() > 0;
    //@ ensures (\forall int i; 0 <= i && i < \result.length(); ('A' <= \result.charAt(i) && \result.charAt(i) <= 'Z'));
    public String convertToTitle(int columnNumber) {
        StringBuffer sb = new StringBuffer();
        //@ ghost int maxnumber = Integer.MAX_VALUE;
        //@ maintaining columnNumber > 0;
        //@ maintaining (\forall int i; 0 <= i && i < sb.length(); ('A' <= sb.charAt(i) && sb.charAt(i) <= 'Z'));
        //@ decreases maxnumber - columnNumber;
        while (columnNumber > 0) {
            int a0 = (columnNumber - 1) % 26 + 1;
            sb.append((char)(a0 - 1 + 'A'));
            columnNumber = (columnNumber - a0) / 26;
        }
        return sb.reverse().toString();
    }
}
/home/max/Documents/JMLGPT/tmp/ConvertToTitle.java:18: verify: The prover cannot establish an assertion (UndefinedCalledMethodPrecondition: /home/max/Documents/JMLGPT/openjml/specs/java/lang/String.jml:447:) in method convertToTitle
}
^
Note: Call stack
  /home/max/Documents/JMLGPT/openjml/specs/java/lang/String.jml:458: java.lang.String.equals
  /home/max/Documents/JMLGPT/openjml/specs/java/lang/StringBuffer.jml:35: java.lang.String.equals
  /home/max/Documents/JMLGPT/tmp/ConvertToTitle.java:6: java.lang.StringBuffer.<init>
/home/max/Documents/JMLGPT/openjml/specs/java/lang/String.jml:447: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ConvertToTitle.java:18:
      @ public static model helper boolean equals(nullable String s1, nullable String s2);
                                           ^
/home/max/Documents/JMLGPT/openjml/specs/java/lang/String.jml:436: verify: Precondition conjunct is false: s1.charArray != null
      @   //-RAC@ requires s1.charArray != null & s2.charArray != null; // OPENJML: TODO Needs the invariant that charArray is not null
                                        ^
/home/max/Documents/JMLGPT/openjml/specs/java/lang/String.jml:439: verify: Precondition conjunct is false: s1 == s2
      @   requires s1 == s2;
                      ^
/home/max/Documents/JMLGPT/openjml/specs/java/lang/String.jml:442: verify: Precondition conjunct is false: s1 == null || s2 == null || (java.lang.String.isInterned(s1) && java.lang.String.isInterned(s2))
      @   requires s1 == null || s2 == null ||
                                            ^
5 verification failures

class Solution {
    //@ requires columnNumber > 0;
    //@ ensures \result.length() > 0;
    //@ ensures (\forall int i; 0 <= i && i < \result.length(); ('A' <= \result.charAt(i) && \result.charAt(i) <= 'Z'));
    public String convertToTitle(int columnNumber) {
        StringBuilder sb = new StringBuilder();
        //@ ghost int maxnumber = Integer.MAX_VALUE;
        //@ maintaining columnNumber > 0;
        //@ maintaining (\forall int i; 0 <= i && i < sb.length(); ('A' <= sb.charAt(i) && sb.charAt(i) <= 'Z'));
        //@ decreases maxnumber - columnNumber;
        while (columnNumber > 0) {
            int a0 = (columnNumber - 1) % 26 + 1;
            sb.append((char)(a0 - 1 + 'A'));
            columnNumber = (columnNumber - a0) / 26;
        }
        return sb.reverse().toString();
    }
}
/home/max/Documents/JMLGPT/tmp/ConvertToTitle.java:9: verify: The prover cannot establish an assertion (LoopInvariantBeforeLoop) in method convertToTitle
        //@ maintaining (\forall int i; 0 <= i && i < sb.length(); ('A' <= sb.charAt(i) && sb.charAt(i) <= 'Z'));
            ^
/home/max/Documents/JMLGPT/tmp/ConvertToTitle.java:9: verify: The prover cannot establish an assertion (LoopInvariant) in method convertToTitle
        //@ maintaining (\forall int i; 0 <= i && i < sb.length(); ('A' <= sb.charAt(i) && sb.charAt(i) <= 'Z'));
            ^
2 verification failures

class Solution {
    //@ requires columnNumber > 0;
    //@ ensures \result.length() > 0;
    //@ ensures (\forall int i; 0 <= i && i < \result.length(); ('A' <= \result.charAt(i) && \result.charAt(i) <= 'Z'));
    public String convertToTitle(int columnNumber) {
        StringBuilder sb = new StringBuilder();
        //@ ghost int maxnumber = Integer.MAX_VALUE;
        //@ maintaining columnNumber > 0;
        //@ maintaining (\forall int i; 0 <= i && i < sb.length(); ('A' <= sb.charAt(i) && sb.charAt(i) <= 'Z'));
        //@ decreases maxnumber - columnNumber;
        while (columnNumber > 0) {
            int a0 = (columnNumber - 1) % 26 + 1;
            sb.append((char)(a0 - 1 + 'A'));
            //@ maintaining (\forall int i; 0 <= i && i < sb.length(); ('A' <= sb.charAt(i) && sb.charAt(i) <= 'Z'));
            columnNumber = (columnNumber - a0) / 26;
        }
        return sb.reverse().toString();
    }
}
/home/max/Documents/JMLGPT/tmp/ConvertToTitle.java:14: error: Loop specifications must immediately precede a loop statement
            //@ maintaining (\forall int i; 0 <= i && i < sb.length(); ('A' <= sb.charAt(i) && sb.charAt(i) <= 'Z'));
                ^
1 error

